# ChillFinance

./: .gitignore  AGENTS.md  PREGRESS.md  README.md  env.example  pyproject.toml
backend/: app.py  cli.py  config.py  constant.py
backend/domain/: __init__.py  catalog.py  derived_series.py  models.py  providers.py
backend/ingest/: __init__.py  akshare_china.py  askci_public.py  china_data.py  coal_public.py  eia_public.py  fred.py  nea_public.py  pbc_public.py  seed.py  service.py  unavailable.py  us_treasury.py  world_bank.py
backend/storage/: __init__.py  duckdb_store.py
docs/superpowers/plans/: 2026-05-21-local-macro-monitor.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: ComparisonPanel.tsx  DashboardHeader.tsx  DomainSidebar.tsx  DomainUpdatePanel.tsx  IndicatorCard.tsx  IndicatorGrid.tsx  OverviewPanel.tsx  RatesCurvePanel.tsx  SelectorBar.tsx  TimeRangeBar.tsx  localization.ts  timeRange.ts
scripts/: bootstrap.ps1  bootstrap.sh  download-data.ps1  download-data.sh  start-dev.ps1  start-dev.sh
tests/: conftest.py  test_akshare_china_parser.py  test_api.py  test_askci_public_parser.py  test_catalog.py  test_china_data_parser.py  test_cli.py  test_coal_public_parser.py  test_duckdb_store.py  test_eia_public_parser.py  test_fred_parser.py  test_ingest_service.py  test_nea_public_parser.py  test_pbc_public_parser.py  test_us_treasury_parser.py  test_world_bank_parser.py
