[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-macro-monitor"
version = "0.1.0"
description = "Local-first macro data ingestion and dashboard."
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10,<4",
    "duckdb>=1.0,<2",
    "fastapi>=0.111,<1",
    "httpx>=0.27,<1",
    "pandas>=2.2,<3",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "typer>=0.12,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
